# molpy

./: .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  CONTRIBUTING.md  README.md  index.html  log  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.cursor/rules/: general.mdc
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: proposal-discuss.md
.github/instructions/: general.instructions.md
.github/workflows/: ci.yml  docs.yml  release.yml
api/: index.html
api/adapter/: index.html
api/builder/: index.html
api/core/: index.html
api/engine/: index.html
api/io/: index.html
api/op/: index.html
api/pack/: index.html
api/parser/: index.html
api/potential/: index.html
api/reacter/: index.html
api/typifier/: index.html
assets/stylesheets/: extra.css
changelog/: index.html
changelog/releases/: index.html
developer/: index.html
developer/coding-style/: index.html
developer/compute/: index.html
developer/contributing/: index.html
developer/development-setup/: index.html
developer/release-process/: index.html
developer/testing/: index.html
docs/: atomtypifier_guide.md  index.md  map_interface_design.md  programming_modeling.md  typifier_usage.md
docs/api/: adapter.md  builder.md  core.md  engine.md  index.md  io.md  op.md  pack.md  parser.md  potential.md  reacter.md  typifier.md
docs/changelog/: releases.md
docs/compute/: dielectric.md
docs/developer/: coding-style.md  compute.py  contributing.md  custom-io.md  custom-selections.md  custom-wrappers.md  development-setup.md  extending-forcefield.md  extending-io.md  extending-tools.md  index.md  placer.md  release-process.md  smarts-matcher.md  testing.md
docs/getting-started/: cheatsheet.md  core-concepts.ipynb  core-concepts.md  faq.md  glossary.md  index.md  installation.ipynb  installation.md  llm_friendly.md  naming-conventions.md  quickstart.ipynb  quickstart.md
docs/how-to/: ambertools.md  io-workflows.md  molecular-building.md  molecular-packing.md  packmol.md  potential-calculations.md
docs/reference/: index.md
docs/tutorials/: 02_block_and_frame.md  03_box_and_periodicity.md  04_force_field.md  atomistic.md  block-frame.md  box.ipynb  box.md  crystal-builder.ipynb  element.md  force-field.ipynb  forcefield.md  frame-block.ipynb  index.md  molecular-graph-model.ipynb  region.md  selection.md  selector.ipynb  system-organization.md  topology.ipynb  topology.md  trajectory.ipynb  trajectory.md  wrappers.ipynb
docs/user-guide/: 01_parsing_chemistry.ipynb  01_parsing_chemistry.md  02_polymer_stepwise.ipynb  02_polymer_stepwise.md  03_polymer_smiles.ipynb  03_polymer_topology.md  04_crosslinking.md  04_polymer_crosslinking.ipynb  05_polydisperse_systems.md  05_polymer_polydisperse.ipynb  06_polymer_polydisperse_lammps.ipynb  06_typifier.md  07_ambertools_integration.md  07_typifier_tfsi.ipynb  08_moltemplate_cli.md  adapter.ipynb  index.md  (+14 more)
examples/: atom_typifier_example.py  comprehensive_polymer_test.py  generate_3d_example.py  matcher_example.py  polymer_restructure_demo.py  programming-modeling.md  programming_modeling.py  reacter_integration.py  reacter_polymerbuilder_integration.py  simple_reacter_example.py  smiles_to_mol_example.py  typifier_example.py
notebooks/: bigsmiles_rdkit_demo.ipynb  reacter_polymerbuilder_integration.ipynb
scripts/: compare_gaff_implementations.py  convert_gaff.py  demo_peo_gaff.py
search/: search_index.json
test_amber_wrapper/: IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  USAGE_DEMO.md  demo_final_usage.py  run_amber_workflow.py  test_frcmod_io.py  tleap.in  workflow_scheme_b.py
test_tleap_builder/: build_peo_example.py  workflow.py
tests/: conftest.py  test_selection.py
tutorials/: index.html
user-guide/: index.html  system.data
(+465 files in other folders)
